--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Library</h1>
+    <button id="new-book">New Book</button>
+    <div class="grid" id="books-container">
+    </div>
+    <div id="new-book-form">
+        <div class="form-topbar">
+            <div class="form-topbar-logo">
+                <img alt="form logo" src="images\bakemonogatari.webp" 
+                class="image"/>
+            </div>
+            <span class="form-topbar-text">New Book Form</span>
+            <div id="form-topbar-cross">×</div>
+        </div>
+        <div class="input-div">
+            <label for="name-input">Name</label>
+            <input id="name-input" type="text">
+        </div>
+        <div class="input-div">
+            <label for="author-input">Author</label>
+            <input id="author-input" type="text">
+        </div>
+        <div class="input-div">
+            <label for="pages-input">Pages</label>
+            <input id="pages-input" type="number">
+        </div>
+        <div class="input-div">
+            <label for="image-input">Image link</label>
+            <input id="image-input" type="text">
+        </div>
+        <label for="read-input">Have you read it?</label>
+        <input id="read-input" class="checkbox" type="checkbox">
+        <div class="input-div">
+            <button id="submit-form">Submit</button>
+        </div>
+    </div>
 </body>
 </html>
