added cool window dragging feature

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grid" id="books-container">
     </div>
     <div id="new-book-form">
-        <div class="form-topbar">
+        <div id="form-topbar">
             <div class="form-topbar-logo">
                 <img alt="form logo" src="images\bakemonogatari.webp" 
                 class="image"/>
